# better-ccflare-rs

./: .gitignore  Cargo.toml  Dockerfile  PROJECT_INDEX.md  README.md  XFACTOR_PLAN.md  better-ccflare.service  docker-compose.yml  package.json
.cargo/: config.toml
.github/workflows/: claude-code-review.yml  claude.yml  pr-review.yml  release.yml  rust-release.yml
apps/cli/: build-multi-arch.ts  package.json
apps/lander/src/: styles.css
better-ccflare-rs/: Cargo.toml  install.sh
better-ccflare-rs/crates/cli/: Cargo.toml
better-ccflare-rs/crates/cli/src/: args.rs  commands.rs  levenshtein.rs  lib.rs
better-ccflare-rs/crates/core/: Cargo.toml
better-ccflare-rs/crates/core/src/: config.rs  config_watcher.rs  constants.rs  events.rs  lib.rs  models.rs  path_validator.rs  providers.rs  state.rs  types.rs  validation.rs  version.rs
better-ccflare-rs/crates/dashboard/: Cargo.toml
better-ccflare-rs/crates/dashboard/src/: lib.rs  routes.rs  templates.rs
better-ccflare-rs/crates/dashboard/templates/: base.html
better-ccflare-rs/crates/dashboard/templates/partials/: accounts_table.html  agents_table.html  api_keys_table.html  logs_stream.html  requests_table.html  stats_table.html
better-ccflare-rs/crates/dashboard/templates/tabs/: accounts.html  analytics.html  api_keys.html  overview.html  stats.html
better-ccflare-rs/crates/database/: Cargo.toml
better-ccflare-rs/crates/database/src/: async_writer.rs  error.rs  lib.rs  migrations.rs  pool.rs  retention.rs  schema.rs
better-ccflare-rs/crates/database/src/repositories/: account.rs  agent_preference.rs  api_key.rs  mod.rs  oauth.rs  stats.rs  strategy.rs  xfactor.rs
better-ccflare-rs/crates/load-balancer/: Cargo.toml
better-ccflare-rs/crates/load-balancer/src/: lib.rs
better-ccflare-rs/crates/oauth/src/: lib.rs
better-ccflare-rs/crates/providers/: Cargo.toml
better-ccflare-rs/crates/providers/src/: error.rs  model_mapping.rs  pkce.rs  test_util.rs  token_health.rs  traits.rs  types.rs  usage_polling.rs
better-ccflare-rs/crates/providers/src/impls/: anthropic_compatible.rs  claude_oauth.rs  minimax.rs  mod.rs  openai_compatible.rs  openai_stream.rs  vertex_ai.rs  zai.rs
better-ccflare-rs/crates/proxy/: Cargo.toml
better-ccflare-rs/crates/proxy/src/: accounts.rs  api.rs  auth.rs  auto_refresh.rs  crypto.rs  handler.rs  lib.rs  oauth.rs  post_processor.rs  pricing.rs  proxy.rs  server.rs  shutdown.rs  streaming.rs  token_health.rs  token_manager.rs
better-ccflare-rs/crates/proxy/src/handlers/: agents.rs  api_keys.rs  logs.rs  stats.rs  token_health.rs  xfactor.rs
better-ccflare-rs/crates/proxy/src/xfactor/: mod.rs
better-ccflare-rs/crates/proxy/tests/: api_tests.rs  proxy_integration.rs
better-ccflare-rs/src/: main.rs
claudedocs/: upstream-sync-v3.1.10.md
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/cli/src/: args.rs  commands.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: account_eligibility.rs  config.rs  config_watcher.rs  errors.rs  lib.rs  logging.rs  models.rs  path_validator.rs  rate_limit.rs  redact.rs  state.rs  types.rs  utils.rs  validation.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs  routes.rs  templates.rs
crates/dashboard/templates/: base.html
crates/dashboard/templates/partials/: accounts_table.html  agents_table.html  api_keys_table.html  logs_stream.html  requests_table.html  stats_table.html
crates/dashboard/templates/tabs/: accounts.html  agents.html  analytics.html  capacity.html  logs.html  overview.html  requests.html
crates/database/: Cargo.toml
crates/database/src/: async_writer.rs  lib.rs  migrations.rs  paths.rs  pool.rs  retention.rs  retry.rs  schema.rs
crates/database/src/repositories/: account.rs  agent_preference.rs  api_key.rs  request.rs  stats.rs  xfactor.rs
crates/load-balancer/src/: lib.rs
crates/oauth/: Cargo.toml
crates/providers/: Cargo.toml
crates/providers/src/: error.rs  lib.rs  model_mapping.rs  registry.rs  stub.rs  test_util.rs  token_manager.rs  types.rs  usage_polling.rs
crates/providers/src/impls/: anthropic_compatible.rs  claude_oauth.rs  minimax.rs  mod.rs  nanogpt.rs  openai_compatible.rs  openai_format.rs  openai_stream.rs  vertex_ai.rs  zai.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: accounts.rs  api.rs  auth.rs  auto_refresh.rs  crypto.rs  handler.rs  lib.rs  oauth.rs  post_processor.rs  pricing.rs  prometheus.rs  proxy.rs  server.rs  streaming.rs  token_health.rs  token_manager.rs
crates/proxy/src/handlers/: agents.rs  analytics.rs  api_keys.rs  mod.rs  requests.rs  streams.rs  token_health.rs  xfactor.rs
crates/proxy/src/xfactor/: mod.rs  state.rs
crates/proxy/tests/: api_tests.rs  proxy_integration.rs
docs/: rust-improvement-backlog.md
src/: main.rs
