[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/database",
    "crates/providers",
    "crates/load-balancer",
    "crates/proxy",
    "crates/oauth",
    "crates/dashboard",
    "crates/analytics",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nicholasgriffintn/better-ccflare"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Atomic config swap
arc-swap = "1"

# Async trait
async-trait = "0.1"

# Crypto / encoding
sha2 = "0.10"
scrypt = "0.11"
subtle = "2"
base64 = "0.22"
rand = "0.9"

# Templating
askama = "0.13"

# HTTP types
http = "1"

# Google Cloud auth
yup-oauth2 = "12"

# Metrics / Monitoring
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Filesystem watching
notify = "7"
notify-debouncer-mini = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
dirs = "6"
tempfile = "3"

# Internal crates
bccf-core = { path = "crates/core" }
bccf-database = { path = "crates/database" }
bccf-providers = { path = "crates/providers" }
bccf-load-balancer = { path = "crates/load-balancer" }
bccf-proxy = { path = "crates/proxy" }
bccf-oauth = { path = "crates/oauth" }
bccf-dashboard = { path = "crates/dashboard" }
bccf-analytics = { path = "crates/analytics" }
bccf-cli = { path = "crates/cli" }

# ---------------------------------------------------------------------------
# Release build optimizations
# ---------------------------------------------------------------------------

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"  # Optimize for binary size

[package]
name = "better-ccflare"
version.workspace = true
edition.workspace = true

[[bin]]
name = "better-ccflare"
path = "src/main.rs"

[dependencies]
bccf-core = { workspace = true }
bccf-cli = { workspace = true }
bccf-database = { workspace = true }
bccf-providers = { workspace = true }
bccf-load-balancer = { workspace = true }
bccf-proxy = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
