[package]
name = "bccf-oauth"
version.workspace = true
edition.workspace = true

[dependencies]
bccf-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
