[package]
name = "bccf-providers"
version.workspace = true
edition.workspace = true

[dependencies]
bccf-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
yup-oauth2 = { workspace = true }
