[package]
name = "bccf-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
bccf-core = { workspace = true }
bccf-database = { workspace = true }
bccf-providers = { workspace = true }
bccf-load-balancer = { workspace = true }
async-trait = { workspace = true }
bytes = "1"
chrono = { workspace = true }
dashmap = { workspace = true }
futures = "0.3"
http = { workspace = true }
pin-project-lite = "0.2"
rand = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
